# dev-foundry

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  check_setup_macos.py  claude_mcp_client.py  docker-compose.yml  generate_instances.py  hephaestus_config.yaml  instances.yaml  pyproject.toml  qdrant_mcp_openai.py  requirements.txt  run_example.py  run_monitor.py  run_prd_workflow.py  run_server.py  run_swebench_batch.py  run_swebench_workflow.py
.venv-mcp/: pyvenv.cfg
config/: agent_config.yaml
design_docs/: 06_ticket_tracking_system.md
example_workflows/: __init__.py
examples/: .gitignore_template  PRD.md  azure_config_example.yaml  google_config_example.yaml
frontend/: PHASE_VISUALIZATION_PRD.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: add_analysis_tables.py  add_diagnostic_agent_support.py  add_last_message_marker_column.py  bootstrap_project.py  clean_qdrant.py  create_test_tickets.py  create_test_tickets_sql.py  fix_commit_stats.py  init_db.py  init_qdrant.py  inspect_qdrant.py  migrate_add_worktrees.py  reindex_all_tickets.py  verify_setup.py
src/: __init__.py
tests/: README.md  __init__.py  e2e_ticket_test.py  manual_validation_test.py  run_all_tests.py  test_agent_communication.py  test_agent_output_capture.py  test_agent_output_integration.py  test_authentication.py  test_conductor.py  test_diagnostic_agent.py  test_diagnostic_integration.py  test_guardian.py  test_llm_interface.py  test_mcp_results_endpoint.py  test_mcp_results_endpoint_async.py  (+33 more)
(+362 files in other folders)
