[tool.poetry]
name = "hephaestus"
version = "0.1.0"
description = "Autonomous AI Agent Orchestration System"
authors = ["Hephaestus Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
qdrant-client = "^1.7.4"
openai = "^1.0.0"
anthropic = "^0.8.0"
libtmux = "^0.23.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
aiofiles = "^23.0.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
alembic = "^1.13.0"
httpx = "^0.25.0"
websockets = "^12.0"
tenacity = "^8.2.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
ipython = "^8.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"